Ensure space tiles wrap to support smaller screens (#547)

--- a/ui/src/SpaceDashboard/SpaceDashboard.scss
+++ b/ui/src/SpaceDashboard/SpaceDashboard.scss
@@ -15,14 +15,17 @@
  * limitations under the License.
  */
 
-@import "../Application/Styleguide/Colors.scss";
+@import '../Application/Styleguide/Colors.scss';
+
+$spaceTileWidth: 400px;
 
 .userSpaceItemContainer {
-  margin-top: 50px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
   grid-auto-rows: 128px;
+  grid-template-columns: repeat(auto-fill, minmax($spaceTileWidth, 1fr));
+  justify-content: center;
   grid-gap: 32px;
+  margin-top: 50px;
   padding: 88px;
 }
 
